--- a/index.html
+++ b/index.html
@@ -9,21 +9,21 @@
 		<nav>
     		<ul>
         		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
+	        	<li><a href="/about">Sobre Mí</a></li>
+        		<li><a href="/cv">Servicios</a></li>
         		<li><a href="/blog">Blog</a></li>
     		</ul>
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Hi there, I'm Hank Quinlan!</h1>
-				<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+        		<h1>Hola, soy Mario Romero!</h1>
+				<p>Consultor IT / Project Leader <a href="/about"> Cómo puedo ayudarte...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+        		<li><a href="mailto:yo@marioromero.com.ar">email</a></li>
+        		<li><a href="https://github.com/marioromero78">github.com/marioromero78</a></li>
 			</ul>
 		</footer>
 	</body>
