--- a/index.html
+++ b/index.html
@@ -1,30 +1,11 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Testing Jekyll - Rapid Blog System</title>
-		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">Sobre Mí</a></li>
-        		<li><a href="/cv">Servicios</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hola, soy Mario Romero!</h1>
-				<p>Consultor IT / Project Leader <a href="/about"> Cómo puedo ayudarte...</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:yo@marioromero.com.ar">email</a></li>
-        		<li><a href="https://github.com/marioromero78">github.com/marioromero78</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+
+ ---
+layout: default
+title: Jekyll TEST - INDEX
+---
+<div class="blurb">
+	<h1>Hola, soy Mario Romero!</h1>
+	<p>Consultor IT / Project Leader <a href="/about"> Más sobre Cómo puedo ayudarte...</a></p>
+</div><!-- /.blurb -->
+        		
+
