--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 ---
 <div class="blurb">
 	<h1>Hola, soy Mario Romero!</h1>
-	<p>Consultor IT / Project Leader <a href="/about"> Más sobre Cómo puedo ayudarte...</a></p>
+	<p>Consultor IT / Docente <a href="/about"> Más sobre Cómo puedo ayudarte...</a></p>
 </div><!-- /.blurb -->
         		
 
