--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 ---
-title: Jekyll_TEST
+title: The Log
 layout: default
 ---
 <div class="blurb">
-	<h1>Hola, soy Mario Romero!</h1>
-	<p>Desarrollador Web Senior / Consultor IT / Instructor IT <a href="/about"> Más sobre Cómo puedo ayudarte...</a></p>
+	<h1>Another tech blog</h1>
 </div><!-- /.blurb -->
         		
 
